# blackbox-demo

./: .gitignore  CMakeLists.txt  README.md
01_define_private_public/: README.md  helper.hpp  main.cpp
02_pointer_offset_cast/: README.md  example.cpp
03_friend_injection/: README.md  example.cpp
04_template_alias_trick/: README.md  example.cpp
05_accessor_pattern/: README.md  example.cpp
RTTI/: CMakeLists.txt  example.cpp
define-private-public/: CMakeLists.txt  example.cpp  json_parser.hpp
layout/: CMakeLists.txt  example.cpp
odr/: CMakeLists.txt
template-specialization/: CMakeLists.txt  example.cpp
type_traits/: CMakeLists.txt  example.cpp
